# nanobananaMCP

./: .env.example  .gitignore  CLAUDE.md  MCP_SETUP_GUIDE.md  NANOBANANA_MCP_FUNCTIONS.md  README.md  README.md.WIP  README_KR.md  pyproject.toml  requirements.txt  simple_type_test.py  storybook.html  test_api_key.py  test_basic.py  test_format_fix.py  test_image_generation.py  test_results.md  test_type_conversion.py  test_utilities.py
.claude/: settings.local.json
examples/: basic_usage.py  claude_integration.py
src/: __init__.py  config.py  config_keyloader.py  constants.py  gemini_client.py  server.py
src/models/: __init__.py  schemas.py
src/tools/: __init__.py  blend.py  edit.py  generate.py  status.py
src/utils/: __init__.py  debug_tools.py  file_manager.py  image_handler.py  prompt_optimizer.py
tests/: __init__.py  conftest.py  test_gemini_client.py  test_image_handler.py  test_tools.py
